infra/k8s/configserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
    # imagePullSecrets:
    #    - name: gitlab-registry-secret
      containers:
        - name: config
          image: config-server:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8888
          volumeMounts:
            - name: config-volume
              mountPath: /config   # 👈 IMPORTANT
      volumes:
        - name: config-volume
          configMap:
            name: app-config-files

---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: ecommerce
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
