infra/k8s/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: discovery-server:1.0.0
          imagePullPolicy: Never
       #   command: ["sh", "-c", "sleep 3600"]
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: ecommerce
spec:
  selector:
    app: discovery
  ports:
    - port: 8761
